@@ -14,6 +14,7 @@ require 'god/condition'
 require 'god/conditions/timeline'
 require 'god/conditions/process_running'
 require 'god/conditions/process_exits'
+require 'god/conditions/tries'
 require 'god/conditions/memory_usage'
 require 'god/conditions/cpu_usage'
 require 'god/conditions/always'
